--- a/WU.html
+++ b/WU.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Federal Way, WA Weather</title>
+    <title>KWAFEDER5 WX Station</title>
     <link rel="stylesheet" href="WU.css">
 </head>
 <body>
