--- a/WU.html
+++ b/WU.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="WU.css">
 </head>
 <body>
-    <h1>LIVE Weather Data for Federal Way, WA</h1>
+    <h1>LIVE Federal Way Weather</h1>
     <div class="container">
         <div class="group temp-humidity-windchill">
             <p class="group-title">Temperature, Humidity, and Wind Chill</p>
