Remove degree symbol from cardinal Dir

--- a/WU.html
+++ b/WU.html
@@ -23,7 +23,7 @@
             <p class="group-title">Wind Speed, Gust, and Direction</p>
             <p>Wind Speed: <span id="wind-speed"></span> mph</p>
             <p>Wind Gust: <span id="wind-gust"></span> mph</p>
-            <p>Wind Direction: <span id="wind-dir"></span>°</p>
+            <p>Wind Direction: <span id="wind-dir"></span></p>
         </div>
         <div class="group solar-uv">
             <p class="group-title">Solar Radiation and UV Index</p>
