Update title name

--- a/WU.html
+++ b/WU.html
@@ -31,7 +31,7 @@
             <p>UV Index: <span id="uv-index"></span></p>
         </div>
         <div class="group pressure">
-            <p class="group-title">Pressure</p>
+            <p class="group-title">Pressure and Precipitation</p>
             <p>Pressure: <span id="pressure"></span> inHg</p>
             <p>Precipitation Rate: <span id="precip-rate"></span> in/hr</p>
             <p>Total Precipitation: <span id="total-precip"></span> in</p>
