move files and update

--- a/WU.html
+++ b/WU.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KWAFEDER5 WX Station</title>
-    <link rel="stylesheet" href="WU.css">
+    <link rel="stylesheet" href="/styles/WU.css">
 </head>
 
 <body>
@@ -45,6 +45,6 @@
         <p>Last update: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span> seconds</p>
     </div>
-    <script src="WU.js"></script>
+    <script src="/scripts/WU.js"></script>
 </body>
 </html>
