--- a/WU.html
+++ b/WU.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="update-info center">
-        <p>Last update: <span id="last-update"></span></p>
+        <p>Updated: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span> seconds</p>
     </div>
     <script src="scripts/WU.js"></script>
