--- a/WU.html
+++ b/WU.html
@@ -44,6 +44,7 @@
     <div class="update-info center">
         <p>Updated: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span> seconds</p>
+        <P>Ver # 1.1</P>
     </div>
     <script src="scripts/WU.js"></script>
 </body>
