change weather favicon

--- a/WU.html
+++ b/WU.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KWAFEDER5 WX Station</title>
-    <link rel="icon" href="images/temperature.png" type="image/png">
+    <link rel="icon" href="images/weather.png" type="image/png">
     <link rel="stylesheet" href="styles/WU.css">
 </head>
 
@@ -45,7 +45,7 @@
     <div class="update-info center">
         <p>Updated: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span> seconds</p>
-        <P>Ver 1.30</P>
+        <P>Ver 1.31</P>
     </div>
     <script src="scripts/WU.js"></script>
 </body>
