minor fixes, add a dew point function

--- a/WU.html
+++ b/WU.html
@@ -18,13 +18,14 @@
             <p>Station ID: <span id="station-id"></span></p>
             <p>Temperature: <span id="temperature"></span>°F</p>
             <p>Humidity: <span id="humidity"></span>%</p>
-            <p>Wind Chill: <span id="wind-chill"></span>°F</p>
+            <p>Dew Point: <span id="dew-point"></span>°F</p>
         </div>
         <div class="group wind-speed-gust-direction">
             <p class="group-title">Wind Speed, Gust, and Direction</p>
             <p>Wind Speed: <span id="wind-speed"></span> mph</p>
             <p>Wind Gust: <span id="wind-gust"></span> mph</p>
             <p>Wind Direction: <span id="wind-dir"></span></p>
+            <p>Wind Chill: <span id="wind-chill"></span>°F</p>
         </div>
         <div class="group solar-uv">
             <p class="group-title">Solar Radiation and UV Index</p>
@@ -45,7 +46,7 @@
     <div class="update-info center">
         <p>Updated: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span> seconds</p>
-        <P>Ver 1.51</P>
+        <P>Ver 1.60</P>
     </div>
     <script src="scripts/WU.js"></script>
 </body>
