--- a/Ambient.html
+++ b/Ambient.html
@@ -29,7 +29,7 @@
         </div>
         <div class="group solar-uv">
             <p class="group-title">Solar Radiation and UV Index</p>
-            <p>Solar Radiation: <span id="solar-radiation"></span> W/m²</p>
+            <p>Solar Radiation: <span id="solar-radiation"></span> Lux</p>
             <p>UV Index: <span id="uv-index"></span></p>
         </div>
         <div class="group pressure">
