--- a/Ambient.html
+++ b/Ambient.html
@@ -24,19 +24,22 @@
             <p class="group-title">Wind Speed, Gust, Direction and Chill</p>
             <p>Wind Speed: <span id="wind-speed"></span> mph</p>
             <p>Wind Gust: <span id="wind-gust"></span> mph</p>
+            <p>Max Gust: <span id="max-daily-gust"></span> mph</p>
             <p>Wind Direction: <span id="wind-dir"></span></p>
             <p>Wind Chill: <span id="wind-chill"></span>°F</p>
         </div>
         <div class="group solar-uv">
             <p class="group-title">Solar Radiation and UV Index</p>
             <p>Solar Radiation: <span id="solar-radiation"></span> Lux</p>
+            <p>Solar Watts: <span id="approx-watts"></span> W/m²</p>
             <p>UV Index: <span id="uv-index"></span></p>
         </div>
         <div class="group pressure">
             <p class="group-title">Pressure and Precipitation</p>
             <p>Pressure: <span id="pressure"></span> inHg</p>
             <p>Precipitation Rate: <span id="precip-rate"></span> in/hr</p>
-            <p>Total Precipitation: <span id="total-precip"></span> in</p>
+            <p>Daily Precipitation: <span id="total-precip"></span> in</p>
+            <p>Last Precipitation: <span id="last-rain"></span></p>
         </div>
         <div class="group current-condition"> <!-- New box for current conditions -->
             <p class="group-title">Current Condition</p>
