switch dewpoint to abs pressure with 29.92 fallback

--- a/Ambient.html
+++ b/Ambient.html
@@ -36,7 +36,7 @@
         </div>
         <div class="group pressure">
             <p class="group-title">Pressure and Precipitation</p>
-            <p>Pressure: <span id="pressure"></span> inHg</p>
+            <p>Pressure: <span id="rel-pressure"></span> inHg</p>
             <p>Precipitation Rate: <span id="precip-rate"></span> in/hr</p>
             <p>Daily Precipitation: <span id="total-precip"></span> in</p>
             <p>Last Precipitation: <span id="last-rain"></span></p>
@@ -50,7 +50,7 @@
         <p>Updated: <span id="last-update"></span></p>
         <p>Next update in: <span id="next-update"></span></p>
         <p>Next update time: <span id="next-update-time"></span></p>
-        <P>Ambient Ver 1.84</P>
+        <P>Ambient Ver 1.85</P>
     </div>
     <script src="scripts/ambient.js"></script>
 </body>
